# OOP_Linux_Boost_Qt

Desktop Piano/: CMakeLists.txt  CommandGUI  Makefile  README.txt  blackkeyfactory.h  dox.config  keyfactory.h  libstoadd.txt  main.cpp  tunescontrol.cpp  whitefactory.h  whitekey.cpp  whitekey.h
Desktop Piano/html/: VolumeControl_8h_source.html  blackkey_8h_source.html  blackkeyfactory_8h_source.html  classMainWindow-members.html  classMainWindow.html  classVolumeControl-members.html  classblackkey.html  classblackkeyfactory__coll__graph.dot  classkeyfactory-members.html  classpianokey-members.html  classpianokey.html  classpianokey__inherit__graph.dot  classtunescontrol.html  classwhitefactory-members.html  classwhitefactory.html  classwhitekey-members.html  classwhitekey__inherit__graph.dot  files.html  functions_func.html  inherit_graph_0.dot  inherit_graph_2.dot  inherit_graph_4.dot  keyfactory_8h_source.html  tunescontrol_8h_source.html  whitekey_8h_source.html
Desktop Piano/html/search/: all_1.js  all_4.js  all_8.js  classes_0.js  classes_3.js  classes_4.js  searchdata.js
Desktop Piano/latex/: classVolumeControl.tex  classblackkey.tex  classblackkey.tex.tmp  classblackkey__inherit__graph.dot  classblackkeyfactory__inherit__graph.dot  classkeyfactory.tex  classpianokey__inherit__graph.dot  classtunescontrol.tex
Linux File Explorer/: CommandGUI  CommandGUI.pro  Makefile  README.txt  RenderContext.cpp  RenderContext.h  abutton.cpp  abutton.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  testb  testb.cpp
virtualpiano/: Piano.pro  Pianokey.h  (+9 more)
(+45 files in other folders)
